# AgentBreak

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  solution.md
data/: assets.json  clean_knowledge_base.json  customers.json  poisoned_knowledge_base.json
reports/: journal_state.json  report_20260625T212522.json  report_20260625T212522.md  report_20260626T161654.json  report_20260626T161654.md  report_20260626T164611.json  report_20260626T164611.md
scripts/: run_demo.ps1  run_demo.sh
src/agentbreak/: __init__.py  chatbot.py  cli.py  journal.py  llm.py  models.py  owasp.py  probes.py  reporting.py  scanner.py  simdata.py  webapp.py
src/agentbreak/web/: app.js  index.html  style.css
src/hacking_ai_agents/: __init__.py  agents_common.py  cli.py  llm.py  logging_utils.py  models.py  policies.py  presenter.py  rag.py  secure_agent.py  security.py  tools.py  vulnerable_agent.py  webapp.py
src/hacking_ai_agents/web/: app.js  index.html  style.css
tests/: test_chatbot.py  test_cli.py  test_journal.py  test_llm.py  test_probes_scanner.py  test_rag.py  test_reporting.py  test_secure_agent.py  test_security_controls.py  test_vulnerable_agent.py  test_web.py  test_webapp.py
