[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hacking-ai-agents-demo"
version = "0.1.0"
description = "Educational demo: indirect prompt injection against a RAG-backed AI agent, with vulnerable and secure variants."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hacking AI Agents Demo" }]
keywords = ["ai", "security", "prompt-injection", "rag", "demo", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
hacking-ai-agents = "hacking_ai_agents.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hacking_ai_agents = ["py.typed", "web/*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
